--- a/environment.yml
+++ b/environment.yml
@@ -25,7 +25,7 @@ dependencies:
   - pip:
     - git+https://github.com/atmtools/climt@rrtmg-only
     - konrad
-    - jupyter-vscode-proxy
+    - jupyter-vscode-proxy[lab]
     - jupyter-keepalive
 
-#test
+
