--- a/environment.yml
+++ b/environment.yml
@@ -21,12 +21,11 @@ dependencies:
   - cbsyst
   - colorcet
   - seaborn
-  - nodejs
   - pip
   - pip:
     - git+https://github.com/atmtools/climt@rrtmg-only
     - konrad
-    - jupyter-vscode-proxy[lab]
+    - jupyter-vscode-proxy==0.6.0
     - jupyter-keepalive
 
 
